--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
 asgiref==3.8.1
+astroid==3.3.9
+dill==0.4.0
 Django==5.2
 django-environ==0.12.0
+isort==6.0.1
+mccabe==0.7.0
+platformdirs==4.3.7
 psycopg==3.2.7
+pylint==3.3.7
 sqlparse==0.5.3
+tomlkit==0.13.2
