Example environment variables

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ DB_PORT=5432
 
 # sneakrets
 SECRET_KEY=lol. lmao, even
+
+# oauth stuff from SL
+CLIENT_ID=your.app.id
+OAUTH_SECRET=your-oauth2-client-secret
