--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 asgiref==3.8.1
 astroid==3.3.9
+certifi==2025.4.26
+charset-normalizer==3.4.2
 dill==0.4.0
 Django==5.2
+django-allauth==65.8.0
 django-environ==0.12.0
+idna==3.10
 isort==6.0.1
 mccabe==0.7.0
 platformdirs==4.3.7
 psycopg==3.2.7
 pylint==3.3.7
+requests==2.32.3
 sqlparse==0.5.3
 tomlkit==0.13.2
+urllib3==2.4.0
