--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 asgiref==3.8.1
 astroid==3.3.9
 certifi==2025.4.26
+cffi==1.17.1
 charset-normalizer==3.4.2
+cryptography==45.0.2
 dill==0.4.0
 Django==5.2
 django-allauth==65.8.0
 django-environ==0.12.0
+djangorestframework==3.16.0
 idna==3.10
 isort==6.0.1
+jwt==1.3.1
 mccabe==0.7.0
 platformdirs==4.3.7
 psycopg==3.2.7
+pycparser==2.22
 pylint==3.3.7
 requests==2.32.3
 sqlparse==0.5.3
