--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dill==0.4.0
 Django==5.2
 django-allauth==65.8.0
 django-environ==0.12.0
+django-filter==25.1
 djangorestframework==3.16.0
 idna==3.10
 isort==6.0.1
