--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,15 @@
 # database creds
-DB_NAME=speed_feed_app
-DB_USER=postgres
-DB_PASSWORD=incorrectpassword
-DB_HOST=127.0.0.1
-DB_PORT=5432
+DATABASE_URL='postgres://user:pass@host:port/db'
 
 # sneakrets
-SECRET_KEY=lol. lmao, even
+SECRET_KEY=something-something-django-key
 
 # oauth stuff from SL
-CLIENT_ID=your.app.id
-OAUTH_SECRET=your-oauth2-client-secret
+CLIENT_ID=somethingsomethingoauth-clientid
+OAUTH_SECRET=somethingsomethingoauthsecret
+
+# postgres info
+POSTGRES_DB=db
+POSTGRES_USER=user
+POSTGRES_PASSWORD=pass
+
