--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,15 @@ django-allauth==65.8.0
 django-environ==0.12.0
 django-filter==25.1
 djangorestframework==3.16.0
+gunicorn==23.0.0
 idna==3.10
 isort==6.0.1
 jwt==1.3.1
 mccabe==0.7.0
+packaging==25.0
 platformdirs==4.3.7
-psycopg==3.2.7
+psycopg==3.2.9
+psycopg-binary==3.2.9
 pycparser==2.22
 pylint==3.3.7
 requests==2.32.3
